# WifiManager

./: CMakeLists.txt  README.md  build.sh  install-dependencies.sh
src/: main.cpp  mainwindow.cpp  mainwindow.h  networkstats.cpp  networkstats.h  wifimanager.cpp  wifimanager.h
